# units

./: .gitignore  README.md  generate_docs.py  manage.py  pyproject.toml  requirements.txt
doc_utils/: __main__.py  constants.py  functions.py  sphinx_builder.py
docs/: .buildinfo  genindex.html  index.html  manage.html  py-modindex.html  search.html  searchindex.js  unit_manager.html  unit_manager.migrations.html  units.html
docs/_modules/: index.html  manage.html
docs/_modules/unit_manager/: apps.html  models.html  tests.html
docs/_modules/unit_manager/migrations/: 0001_initial.html
docs/_sources/: index.rst.txt  manage.rst.txt  unit_manager.migrations.rst.txt  unit_manager.rst.txt
docs/doctrees/: doc_utils.doctree  environment.pickle  generate_docs.doctree  manage.doctree
docs/html/: .buildinfo  doc_utils.html  generate_docs.html  genindex.html  index.html  manage.html  objects.inv  py-modindex.html  search.html  searchindex.js  unit_manager.html  unit_manager.migrations.html  units.html
docs/html/_modules/: index.html  manage.html
docs/html/_modules/unit_manager/: apps.html  models.html  tests.html
docs/html/_modules/unit_manager/migrations/: 0001_initial.html
docs/html/_sources/: doc_utils.rst.txt  generate_docs.rst.txt  index.rst.txt  unit_manager.migrations.rst.txt
docs/source/: conf.py
doctrees/: doc_utils.doctree  environment.pickle  generate_docs.doctree  index.doctree  manage.doctree  unit_manager.doctree  unit_manager.migrations.doctree  units.doctree
html/: objects.inv
html/_modules/: manage.html
html/_sources/: unit_manager.rst.txt
sphinx/source/: conf.py  manage.rst  units.rst
uml/: erd.puml
uml/use_cases/: admin.iuml  user.iuml
unit_manager/: __init__.py  admin.py  apps.py  models.py  tests.py
unit_manager/migrations/: 0001_initial.py
units/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
